@@ -2,6 +2,7 @@ package org.kosa.apigatewayservice.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.web.server.SecurityWebFilterChain;
@@ -23,15 +24,27 @@ public class GatewaySecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeExchange(exchanges ->
                         exchanges
-                                // 🔥 마이페이지 관련 API들 추가!
-                                .pathMatchers("/auth/**",
+                                // 🔥 명시적으로 공개 경로 정의
+                                .pathMatchers(
+                                        "/auth/**",
                                         "/api/users/register",
-                                        "/api/users/checkUserId",
+                                        "/api/users/checkUserId/**",
                                         "/api/users/health",
                                         "/api/users/list",
-                                        "/api/users/verify-password",  // 추가
-                                        "/api/users/profile",          // 추가
-                                        "/api/categories/**").permitAll()
+                                        "/api/users/verify-password",
+                                        "/api/users/profile"
+                                ).permitAll()
+                                // 🔥 카테고리와 상품 서비스는 GET 요청만 허용
+                                .pathMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
+                                .pathMatchers(HttpMethod.GET, "/api/products/**").permitAll()
+                                // 🔥 이미지 서비스 추가!
+                                .pathMatchers(HttpMethod.GET, "/api/images/**").permitAll()
+                                .pathMatchers(HttpMethod.GET, "/images/**").permitAll()
+                                .pathMatchers(HttpMethod.GET, "/static/**").permitAll()
+                                .pathMatchers(HttpMethod.GET, "/assets/**").permitAll()
+                                // 🔥 OPTIONS 요청은 모두 허용 (CORS preflight)
+                                .pathMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                                // 나머지는 인증 필요
                                 .anyExchange().authenticated()
                 )
                 .build();
@@ -41,11 +54,29 @@ public class GatewaySecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // 🔥 allowedOrigins 대신 allowedOriginPatterns 사용 (더 안전)
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000",
+                "http://localhost:*"
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH"
+        ));
+
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
+
+        // 🔥 노출할 헤더 명시적 설정
+        configuration.setExposedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "X-User-Id",
+                "X-User-Name",
+                "X-User-Role"
+        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
